--- a/scss/fonts.scss
+++ b/scss/fonts.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Anton&family=Archivo+Black&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Anton&family=Archivo:wght@300;400;700&display=swap");
 
 $Anton: "Anton", sans-serif;
-$Archivo: "Archivo Black", sans-serif;
+$Archivo: "Archivo", sans-serif;
