--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Anton&family=Archivo:wght@300;400;700&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -9,6 +10,7 @@ header {
   justify-content: space-between;
   padding: 15px 10px;
   background-color: orchid;
+  font-family: "Archivo", sans-serif;
 }
 header .logo {
   width: 15%;
@@ -16,9 +18,28 @@ header .logo {
 header .logo img {
   width: 100%;
 }
+header nav {
+  display: flex;
+  gap: 15px;
+  margin: auto 0;
+}
 header a {
+  position: relative;
   color: black;
   text-decoration: none;
+}
+header a::after {
+  content: "";
+  position: absolute;
+  height: 2px;
+  width: 0;
+  bottom: 0;
+  left: 0;
+  background-color: black;
+  transition: width 0.3s;
+}
+header a:hover::after {
+  width: 100%;
 }
 
 html {
