Terminei a página inicial.

--- a/scss/colors.scss
+++ b/scss/colors.scss
@@ -1,3 +1,7 @@
 $color1: firebrick;
-$color2: orchid;
+$header-bg: white;
 $font-color: black;
+$font-color2: white;
+$font-color3: #439dd7;
+$border-color: black;
+$border-color2: white;
