--- a/scss/fonts.scss
+++ b/scss/fonts.scss
@@ -1,4 +1,4 @@
 @import url("https://fonts.googleapis.com/css2?family=Anton&family=Archivo:wght@300;400;700&display=swap");
 
-$Anton: "Anton", sans-serif;
-$Archivo: "Archivo", sans-serif;
+$anton: "Anton", sans-serif;
+$archivo: "Archivo", sans-serif;
