--- a/scss/main.scss
+++ b/scss/main.scss
@@ -16,7 +16,7 @@ main {
     }
     p:nth-of-type(1) {
       width: 60%;
-      margin: 0 auto;
+      margin: 0 auto 30px;
       font-size: 3.5rem;
       font-family: f.$anton;
       color: c.$font-color2;
