--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ main .inicial img {
 }
 main .inicial p:nth-of-type(1) {
   width: 60%;
-  margin: 0 auto;
+  margin: 0 auto 30px;
   font-size: 3.5rem;
   font-family: "Anton", sans-serif;
   color: white;
