--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,13 +4,18 @@
 main {
   margin-top: 13vh;
   .inicial {
+    position: relative;
     height: 87vh;
-    background-image: url(../img/drugs_background.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
     text-align: center;
-    img {
+    overflow: hidden;
+    img:nth-of-type(2) {
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: -1;
+      width: 100%;
+    }
+    img:nth-of-type(1) {
       margin: 30px auto;
       width: 13%;
     }
