--- a/scss/colors.scss
+++ b/scss/colors.scss
@@ -1,7 +1,9 @@
 $color1: firebrick;
-$header-bg: white;
+$header-bgc: white;
+$footer-bgc: #439dd788;
 $font-color: black;
 $font-color2: white;
 $font-color3: #439dd7;
+$font-color4: #003d72;
 $border-color: black;
 $border-color2: white;
