--- a/style.css
+++ b/style.css
@@ -9,6 +9,42 @@
   font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 200, "opsz" 30;
 }
 
+.login .menu {
+  position: relative;
+}
+.login .menu .menu-faketrigger {
+  position: absolute;
+  right: 0;
+  z-index: 1000;
+  width: 35px;
+  height: 25px;
+  opacity: 0;
+  cursor: pointer;
+}
+.login .menu .menu-faketrigger:checked ~ .menu-lines span:nth-child(1) {
+  transform-origin: 0% 0%;
+  transform: rotate(45deg) scaleX(1.25);
+}
+.login .menu .menu-faketrigger:checked ~ .menu-lines span:nth-child(2) {
+  opacity: 0;
+}
+.login .menu .menu-faketrigger:checked ~ .menu-lines span:nth-child(3) {
+  transform-origin: 0% 100%;
+  transform: rotate(-45deg) scaleX(1.25);
+}
+.login .menu .menu-lines {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+.login .menu .menu-lines span {
+  display: block;
+  width: 35px;
+  height: 5px;
+  background-color: black;
+  border-radius: 20px;
+  transition: all ease 200ms;
+}
 header {
   position: fixed;
   z-index: 999;
@@ -17,6 +53,7 @@ header {
   justify-content: space-between;
   padding: 15px 10px;
   height: 13vh;
+  width: 100%;
   background-color: white;
   font-family: "Archivo", sans-serif;
 }
@@ -65,6 +102,12 @@ header .search span {
   left: 10px;
 }
 header .login {
+  display: flex;
+  flex-direction: row;
+  gap: 30px;
+  margin: auto 0;
+}
+header .login a {
   margin: auto 0;
 }
 
