--- a/style.css
+++ b/style.css
@@ -23,19 +23,21 @@
 }
 .login .menu .menu-faketrigger:checked ~ .menu-lines span:nth-child(1) {
   transform-origin: 0% 0%;
-  transform: rotate(45deg) scaleX(1.25);
+  transform: rotate(44deg) scaleX(1.25);
+  width: 30px;
 }
 .login .menu .menu-faketrigger:checked ~ .menu-lines span:nth-child(2) {
   opacity: 0;
 }
 .login .menu .menu-faketrigger:checked ~ .menu-lines span:nth-child(3) {
   transform-origin: 0% 100%;
-  transform: rotate(-45deg) scaleX(1.25);
+  transform: rotate(-44deg) scaleX(1.25);
+  width: 30px;
 }
 .login .menu .menu-lines {
   display: flex;
   flex-direction: column;
-  gap: 5px;
+  gap: 7px;
 }
 .login .menu .menu-lines span {
   display: block;
