Página principal finalizada.

--- a/scss/colors.scss
+++ b/scss/colors.scss
@@ -11,3 +11,7 @@ $menu-bar-color: black;
 $menu-bgc: white;
 $icon-bgc: #439dd7dd;
 $information-font-color: #003d72;
+$security-cont-color: white;
+$security-cont-color2: #003d72;
+$security-cont-color3: black;
+$security-p-border-color: #003d72;
