--- a/scss/sobre.scss
+++ b/scss/sobre.scss
@@ -1,35 +1,35 @@
 @use "colors" as c;
 @use "fonts" as f;
 
-
-#initial{
-    img{
-        margin: 0 37.5vw;
-        width: 25vw;
-    }
+#initial {
+  background-color: c.$aboutUs-bgc;
+  img {
+    margin: 0 37.5vw;
+    width: 25vw;
+  }
 }
 
-#sobre{
-    padding: 3% 5%;
-    h2{
+#sobre {
+  padding: 3% 5%;
+  h2 {
+    font-family: f.$archivo;
+    color: c.$font-color4;
+    margin-bottom: 3%;
+  }
+  .text-sobre {
+    display: flex;
+    justify-content: space-between;
+    p {
+      &:nth-child(1) {
+        width: 27ch;
+        font-size: 95%;
         font-family: f.$archivo;
-        color: c.$font-color4;
-        margin-bottom: 3%;
+      }
+      &:nth-child(2) {
+        width: 27ch;
+        font-size: 95%;
+        font-family: f.$archivo;
+      }
     }
-    .text-sobre{
-        display: flex;
-        justify-content: space-between;
-        p{
-            &:nth-child(1){
-                width: 27ch;
-                font-size: 95%;
-                font-family: f.$archivo;
-            }
-            &:nth-child(2){
-                width: 27ch;
-                font-size: 95%;
-                font-family: f.$archivo;
-            }
-        }
-    }
+  }
 }
