--- a/style.css
+++ b/style.css
@@ -1,18 +1,230 @@
-/* Error: expected "{".
- *    ,
- * 15 | $aboutUs-bgc: #439DD7;
- *    |                      ^
- *    '
- *   scss/colors.scss 15:22  @use
- *   scss/style.scss 2:1     root stylesheet */
-
-body::before {
-  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
-      "Droid Sans Mono", monospace, monospace;
-  white-space: pre;
-  display: block;
-  padding: 1em;
-  margin-bottom: 1em;
-  border-bottom: 2px solid black;
-  content: 'Error: expected "{".\a    \2577 \a 15 \2502  $aboutUs-bgc: #439DD7;\a    \2502                       ^\a    \2575 \a   scss/colors.scss 15:22  @use\a   scss/style.scss 2:1     root stylesheet';
+@import url("https://fonts.googleapis.com/css2?family=Anton&family=Archivo:wght@300;400;700&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
+
+.material-symbols-rounded {
+  font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 200, "opsz" 30;
+}
+
+.login .menu {
+  position: relative;
+}
+.login .menu .menu-faketrigger {
+  position: absolute;
+  right: 0;
+  z-index: 1000;
+  width: 35px;
+  height: 25px;
+  opacity: 0;
+  cursor: pointer;
+}
+.login .menu .menu-faketrigger:checked ~ .menu-lines span:nth-child(1) {
+  transform-origin: 0% 0%;
+  transform: rotate(45deg) scaleX(1.25);
+  margin-bottom: 4.5px;
+}
+.login .menu .menu-faketrigger:checked ~ .menu-lines span:nth-child(2) {
+  opacity: 0;
+}
+.login .menu .menu-faketrigger:checked ~ .menu-lines span:nth-child(3) {
+  transform-origin: 0% 100%;
+  transform: rotate(-45deg) scaleX(1.25);
+  margin-top: 4.5px;
+}
+.login .menu .menu-faketrigger:checked ~ ul {
+  margin-right: 0;
+}
+.login .menu .menu-lines {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  position: relative;
+  z-index: 999;
+}
+.login .menu .menu-lines span {
+  display: block;
+  width: 35px;
+  height: 5px;
+  background-color: black;
+  border-radius: 20px;
+  transition: all ease 200ms;
+}
+.login .menu ul {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  position: absolute;
+  z-index: 998;
+  right: -2vh;
+  top: -2vw;
+  padding: 13vh 0 5vh 0;
+  width: 300px;
+  height: auto;
+  text-align: center;
+  font-size: 1.5rem;
+  background-color: white;
+  border-radius: 30px;
+  margin-right: -300px;
+  transition: all ease 200ms;
+}
+.login .menu ul li {
+  list-style: none;
+}
+
+header {
+  position: fixed;
+  z-index: 999;
+  top: 0;
+  display: flex;
+  justify-content: space-between;
+  padding: 15px 10px;
+  height: 13vh;
+  width: 100%;
+  background-color: white;
+  font-family: "Archivo", sans-serif;
+}
+header a {
+  font-size: 1.2rem;
+  position: relative;
+  color: black;
+}
+header a::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  height: 2px;
+  width: 0;
+  background-color: black;
+  transition: width 0.3s;
+}
+header a:hover::after {
+  width: 100%;
+}
+header .logo {
+  width: 15%;
+}
+header .logo img {
+  width: 100%;
+}
+header nav {
+  display: flex;
+  gap: 20px;
+  margin: auto 0;
+}
+header .search {
+  position: relative;
+  display: flex;
+  align-items: center;
+  margin: auto 0;
+}
+header .search input {
+  padding: 0 10px 0 35px;
+  border: 2px solid black;
+  border-radius: 50px;
+  font-size: 1.5rem;
+}
+header .search span {
+  position: absolute;
+  left: 10px;
+}
+header .login {
+  display: flex;
+  flex-direction: row;
+  gap: 30px;
+  margin: auto 0;
+}
+header .login a {
+  margin: auto 0;
+}
+
+footer {
+  background-color: rgba(67, 157, 215, 0.5333333333);
+  padding: 20px 0;
+  font-family: "Archivo", sans-serif;
+}
+footer div {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-auto-rows: auto;
+  width: 50%;
+  margin: 0 auto;
+}
+footer .about_us {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+footer .about_us p:nth-of-type(1) a {
+  font-size: 1.3rem;
+  color: #003d72;
+}
+footer .about_us p:nth-of-type(2) a {
+  font-size: 1.1rem;
+  color: black;
+}
+footer .about_us p:nth-of-type(3) a {
+  font-size: 1.1rem;
+  color: black;
+}
+footer .about_us p:nth-of-type(4) a {
+  font-size: 1.1rem;
+  color: black;
+}
+footer .about_us a {
+  position: relative;
+}
+footer .about_us a::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 0;
+  height: 2px;
+  background-color: black;
+  transition: width 0.3s;
+}
+footer .about_us a:hover::after {
+  width: 100%;
+}
+footer .contact {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+footer .contact p:nth-of-type(1) {
+  font-size: 1.3rem;
+  color: #003d72;
+}
+footer .contact p:nth-of-type(2) {
+  font-size: 1.1rem;
+  color: black;
+}
+footer .contact p:nth-of-type(3) {
+  font-size: 1.1rem;
+  color: black;
+}
+footer .social_media {
+  grid-column-start: 1;
+  grid-column-end: 3;
+  text-align: center;
+}
+footer .social_media img {
+  width: 50px;
+  margin: 0 7.5px;
+}
+
+html body {
+  font-size: medium;
+}
+html body a {
+  text-decoration: none;
+}
+html body a:hover {
+  text-decoration: none;
+}
+
+/*# sourceMappingURL=style.css.map */
