Fazendo a página sobre o projeto.

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,6 +7,9 @@
 html {
   body {
     font-size: medium;
+    main {
+      margin-top: 13vh;
+    }
     a {
       text-decoration: none;
       &:hover {
