--- a/css/sobre.css
+++ b/css/sobre.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Anton&family=Archivo:wght@300;400;700&display=swap");
 #initial {
-  background-color: #439DD7;
+  background-color: #439dd7;
 }
 #initial img {
   margin: 0 37.5vw;
