--- a/scss/colors.scss
+++ b/scss/colors.scss
@@ -10,5 +10,6 @@ $border-color2: white;
 $menu-bar-color: black;
 $menu-bgc: white;
 $icon-bgc: #439dd7dd;
-$aboutUs-bgc: #439DD7;
+$aboutUs-bgc: #439dd7;
 $information-font-color: #003d72;
+$about-project-header-font-color: white;
