Resultados da barra de pesquisa feito.

--- a/scss/colors.scss
+++ b/scss/colors.scss
@@ -13,3 +13,5 @@ $icon-bgc: #439dd7dd;
 $aboutUs-bgc: #439dd7;
 $information-font-color: #003d72;
 $about-project-header-font-color: white;
+$search-result-bgc: #439dd7;
+$search-result-hover-color: #003d72aa;
