Arrumando o botão "sobre o projeto".

--- a/scss/colors.scss
+++ b/scss/colors.scss
@@ -15,3 +15,4 @@ $information-font-color: #003d72;
 $about-project-header-font-color: white;
 $search-result-bgc: #439dd7;
 $search-result-hover-color: #003d72aa;
+$security-p-border-color: #003d72;
