--- a/scss/security.scss
+++ b/scss/security.scss
@@ -12,21 +12,38 @@
     background-position: left;
     background-size: cover;
     font-family: f.$archivo;
-    color: c.$security-cont-color;
+    color: c.$font-color2;
     h2 {
       width: 80%;
       font-size: 3rem;
     }
-    p {
+    p:nth-of-type(2) {
       font-size: 2rem;
       font-weight: lighter;
       text-align: right;
+    }
+    p:nth-of-type(1) {
+      text-align: left;
+    }
+    a {
+      margin: 20%;
+      padding: 10px 30px;
+      border: 2px solid c.$border-color2;
+      border-radius: 30px;
+      font-size: 1.5rem;
+      font-family: f.$archivo;
+      color: c.$font-color2;
+      &:hover {
+        background-color: c.$font-color2;
+        color: c.$font-color3;
+        border: 2px solid transparent;
+      }
     }
   }
   .main {
     padding: 30px 50px;
     font-family: f.$archivo;
-    color: c.$security-cont-color2;
+    color: c.$font-color4;
     h2 {
       font-size: 2.5rem;
       font-weight: bold;
