--- a/scss/colors.scss
+++ b/scss/colors.scss
@@ -16,3 +16,5 @@ $about-project-header-font-color: white;
 $search-result-bgc: #439dd7;
 $search-result-hover-color: #003d72aa;
 $security-p-border-color: #003d72;
+$about-section-bgc: #439dd778;
+$card-person-bgc: #ffffff77;
