--- a/scss/fonts.scss
+++ b/scss/fonts.scss
@@ -1,4 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Anton&family=Archivo:wght@300;400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Anton&family=Archivo:wght@300;400;700;900&family=Passion+One:wght@400;700;900&display=swap");
 
 $anton: "Anton", sans-serif;
 $archivo: "Archivo", sans-serif;
+$passion: "Passion One", sans-serif;
