--- a/scss/colors.scss
+++ b/scss/colors.scss
@@ -7,6 +7,7 @@ $font-color3: #439dd7;
 $font-color4: #003d72;
 $border-color: black;
 $border-color2: white;
+$border-color3: #439dd7;
 $menu-bar-color: black;
 $menu-bgc: white;
 $icon-bgc: #439dd7dd;
@@ -18,3 +19,4 @@ $search-result-hover-color: #003d72aa;
 $security-p-border-color: #003d72;
 $about-section-bgc: #439dd778;
 $card-person-bgc: #ffffff77;
+$article-border: #003d72;
