--- a/css/about_project.css
+++ b/css/about_project.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Anton&family=Archivo:wght@300;400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Anton&family=Archivo:wght@300;400;700;900&family=Passion+One:wght@400;700;900&display=swap");
 main .header {
   padding: 200px 50px 30px;
   background-image: url(../img/security_section_bg.png);
@@ -28,6 +28,37 @@ main .header a {
 }
 main .header a:hover {
   text-decoration: underline;
+}
+main .article {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding: 50px;
+  font-family: "Archivo", sans-serif;
+}
+main .article div * {
+  width: 50%;
+}
+main .article div p:nth-of-type(1) {
+  margin: 40px 0 30px;
+}
+main .article figure {
+  padding: 20px;
+  border: 2px solid #003d72;
+  border-radius: 20px;
+}
+main .article figure a {
+  margin: 20%;
+  padding: 10px 30px;
+  border: 2px solid #439dd7;
+  border-radius: 30px;
+  font-size: 1.5rem;
+  font-family: "Archivo", sans-serif;
+  color: #439dd7;
+}
+main .article figure a:hover {
+  background-color: #439dd7;
+  color: white;
+  border: 2px solid transparent;
 }
 
 /*# sourceMappingURL=about_project.css.map */
