--- a/scss/about_project.scss
+++ b/scss/about_project.scss
@@ -32,4 +32,38 @@ main {
       }
     }
   }
+
+  .article {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding: 50px;
+    font-family: f.$archivo;
+    div {
+      * {
+        width: 50%;
+      }
+      p:nth-of-type(1) {
+        margin: 40px 0 30px;
+      }
+    }
+    figure {
+      padding: 20px;
+      border: 2px solid c.$article-border;
+      border-radius: 20px;
+      a {
+        margin: 20%;
+        padding: 10px 30px;
+        border: 2px solid c.$border-color3;
+        border-radius: 30px;
+        font-size: 1.5rem;
+        font-family: f.$archivo;
+        color: c.$font-color3;
+        &:hover {
+          background-color: c.$font-color3;
+          color: c.$font-color2;
+          border: 2px solid transparent;
+        }
+      }
+    }
+  }
 }
