--- a/scss/sobre.scss
+++ b/scss/sobre.scss
@@ -65,7 +65,7 @@
       font-family: f.$archivo;
     }
   }
-  .persons {
+  .slider {
     display: flex;
     overflow-x: auto;
     scroll-snap-type: x mandatory;
