--- a/css/about_project.css
+++ b/css/about_project.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Anton&family=Archivo:wght@300;400;700;900&family=Passion+One:wght@400;700;900&display=swap");
 main .header {
   padding: 200px 50px 30px;
@@ -15,7 +16,7 @@ main .header h1 {
 main .header div {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  width: 40%;
+  width: 50vw;
   margin: 70px auto 0;
 }
 main .header a {
@@ -41,13 +42,37 @@ main .article div * {
 main .article div p:nth-of-type(1) {
   margin: 40px 0 30px;
 }
-main .article figure {
-  padding: 20px;
-  border: 2px solid #003d72;
-  border-radius: 20px;
+main .articles {
+  position: relative;
+  display: grid;
+  grid-template-columns: 5fr 5fr;
+  padding: 20px 0px 40px 20px;
+  font-family: "Archivo", sans-serif;
 }
-main .article figure a {
-  margin: 20%;
+main .articles img[alt="Ícone de lupa"] {
+  position: absolute;
+  z-index: -1;
+  left: -20px;
+  top: 40px;
+  height: 50%;
+}
+main .articles section h2 {
+  font-size: 3rem;
+  color: #003d72;
+}
+.standard_artic {
+  padding: 40px 20px 30px;
+  border: 2px solid #003d72;
+  border-radius: 40px;
+  text-align: center;
+}
+.standard_artic img {
+  border-radius: 0 60px 0 0;
+}
+.standard_artic figcaption {
+  margin: 20px 0 10px;
+}
+.standard_artic a {
   padding: 10px 30px;
   border: 2px solid #439dd7;
   border-radius: 30px;
@@ -55,10 +80,33 @@ main .article figure a {
   font-family: "Archivo", sans-serif;
   color: #439dd7;
 }
-main .article figure a:hover {
+.standard_artic a:hover {
   background-color: #439dd7;
   color: white;
   border: 2px solid transparent;
+}
+
+.slider {
+  display: flex;
+  overflow-x: auto;
+  scroll-snap-type: x mandatory;
+  scrollbar-width: none;
+  scroll-behavior: smooth;
+  font-family: "Archivo", sans-serif;
+}
+.slider::-webkit-scrollbar {
+  width: 0;
+  background: transparent;
+}
+.slider .standard_artic {
+  flex: 0 0 auto;
+  scroll-snap-align: start;
+  width: 400px;
+  height: 100%;
+  margin: 0 15px;
+}
+.slider .standard_artic img {
+  width: 80%;
 }
 
 /*# sourceMappingURL=about_project.css.map */
