--- a/css/sobre.css
+++ b/css/sobre.css
@@ -27,7 +27,7 @@
 }
 .standard_style .icons {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: repeat(3, 1fr);
 }
 .standard_style .icons figure {
   height: 200px;
