--- a/scss/colors.scss
+++ b/scss/colors.scss
@@ -17,5 +17,6 @@ $border-color3: #439dd7;
 $aboutUs-bgc: #439dd7;
 $search-result-bgc: #439dd7;
 $icon-bgc: #439dd7dd;
+$icon-bgc2: #f4f4ec;
 $about-section-bgc: #439dd778;
 $footer-bgc: #439dd788;
