--- a/scss/about_project.scss
+++ b/scss/about_project.scss
@@ -1,5 +1,6 @@
 @use "colors" as c;
 @use "fonts" as f;
+@use "mixins" as m;
 
 main {
   .header {
@@ -52,22 +53,84 @@ main {
     position: relative;
     display: grid;
     grid-template-columns: 5fr 5fr;
-    padding: 20px 0px 40px 20px;
+    padding: 20px 0px 10px 70px;
     font-family: f.$archivo;
+    background-color: c.$about-section-bgc;
     img[alt="Ícone de lupa"] {
       position: absolute;
       z-index: -1;
-      left: -20px;
-      top: 40px;
-      height: 50%;
+      left: -80px;
+      bottom: 0;
+      height: 70%;
     }
     section {
       h2 {
+        margin: 50px 0;
         font-size: 3rem;
         color: c.$font-color4;
       }
       p {
+        width: 70%;
+        font-size: 1.3rem;
       }
+    }
+  }
+
+  .agenda2030 {
+    padding: 30px;
+    font-family: f.$archivo;
+    text-align: center;
+    h2 {
+      font-size: 3rem;
+      font-weight: bold;
+    }
+    .description {
+      width: 60%;
+      margin: 40px auto;
+    }
+    .aspects {
+      @include m.elements_grid(3);
+      column-gap: 100px;
+      width: 90%;
+      margin: 0 auto;
+      div {
+        height: 100%;
+      }
+      figure {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 60%;
+        padding: 30px;
+        background-color: c.$icon-bgc2;
+        border-radius: 50%;
+      }
+      img {
+        width: 80%;
+      }
+      p {
+        margin-top: 30px;
+      }
+    }
+  }
+
+  .interview {
+    @include m.elements_grid(2);
+    padding: 30px;
+    font-family: f.$archivo;
+    background-image: url(../img/interview_bg.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    h2 {
+      font-size: 3rem;
+      color: c.$font-color4;
+    }
+    p {
+      width: 60%;
+      font-size: 1.3rem;
+      margin: 40px 0;
+    }
+    a {
     }
   }
 }
