--- a/scss/sobre.scss
+++ b/scss/sobre.scss
@@ -1,5 +1,6 @@
 @use "colors" as c;
 @use "fonts" as f;
+@use "mixins" as m;
 
 #initial {
   background-color: c.$aboutUs-bgc;
@@ -27,8 +28,9 @@
     }
   }
   .icons {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    @include m.elements_grid(3);
+    // display: grid;
+    // grid-template-columns: 1fr 1fr 1fr;
     figure {
       height: 200px;
       text-align: center;
