--- a/scss/colors.scss
+++ b/scss/colors.scss
@@ -20,3 +20,8 @@ $icon-bgc: #439dd7dd;
 $icon-bgc2: #f4f4ec;
 $about-section-bgc: #439dd778;
 $footer-bgc: #439dd788;
+
+$inverted_colors: (
+  primary: #ffffff,
+  secondary: #003d7277,
+);
