--- a/scss/about_project.scss
+++ b/scss/about_project.scss
@@ -130,7 +130,22 @@ main {
       font-size: 1.3rem;
       margin: 40px 0;
     }
+    .btn {
+      position: relative;
+    }
     a {
+      position: absolute;
+      bottom: 0;
+      padding: 20px 40px;
+      background-color: c.$card-person-bgc;
+      color: c.$font-color4;
+      border: 2px solid c.$font-color4;
+      border-radius: 40px;
+      &:hover {
+        background-color: map-get(c.$inverted_colors, secondary);
+        color: map-get(c.$inverted_colors, primary);
+        border: 2px solid map-get(c.$inverted_colors, primary);
+      }
     }
   }
 }
