--- a/scss/colors.scss
+++ b/scss/colors.scss
@@ -13,6 +13,7 @@ $information-font-color: #003d72;
 $security-p-border-color: #003d72;
 $article-border: #003d72;
 $search-result-hover-color: #003d72aa;
+$cannabis-bgc: #003d7255;
 $border-color3: #439dd7;
 $aboutUs-bgc: #439dd7;
 $search-result-bgc: #439dd7;
