--- a/scss/sobre.scss
+++ b/scss/sobre.scss
@@ -29,19 +29,21 @@
   }
   .icons {
     @include m.elements_grid(3);
-    // display: grid;
-    // grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 40px;
+    margin-top: 30px;
+    text-align: center;
     figure {
+      width: 70%;
       height: 200px;
-      text-align: center;
-    }
-    img {
-      height: 200px;
+      margin: 0 auto 20px;
       padding: 20px;
       background-color: bisque;
       border-radius: 50%;
     }
-    figcaption {
+    img {
+      height: 90%;
+    }
+    p {
       font-family: f.$archivo;
       font-weight: bold;
     }
