--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Anton&family=Archivo:wght@300;400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Anton&family=Archivo:wght@300;400;700;900&family=Passion+One:wght@400;700;900&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -246,6 +246,10 @@ footer .social_media img {
   margin: 0 7.5px;
 }
 
+html {
+  margin: 0;
+  scroll-behavior: smooth;
+}
 html body {
   font-size: medium;
 }
