Comecei as páginas de classes dos remédios, e fiz algumas pequenas alterações.

--- a/scss/colors.scss
+++ b/scss/colors.scss
@@ -8,6 +8,8 @@ $header-bgc: white;
 $menu-bgc: white;
 $border-color2: white;
 $about-project-header-font-color: white;
+$icon-bgc2: #f4f4ec;
+$carousel_drugs: #f4f4ec;
 $card-person-bgc: #ffffff77;
 $information-font-color: #003d72;
 $security-p-border-color: #003d72;
@@ -18,7 +20,6 @@ $border-color3: #439dd7;
 $aboutUs-bgc: #439dd7;
 $search-result-bgc: #439dd7;
 $icon-bgc: #439dd7dd;
-$icon-bgc2: #f4f4ec;
 $about-section-bgc: #439dd778;
 $footer-bgc: #439dd788;
 
