Tentando arrumar um bug do carousel.

--- a/scss/colors.scss
+++ b/scss/colors.scss
@@ -14,6 +14,7 @@ $card-person-bgc: #ffffff77;
 $information-font-color: #003d72;
 $security-p-border-color: #003d72;
 $article-border: #003d72;
+$carousel-btn-bgc: #003d72;
 $search-result-hover-color: #003d72aa;
 $cannabis-bgc: #003d7255;
 $border-color3: #439dd7;
@@ -21,6 +22,7 @@ $aboutUs-bgc: #439dd7;
 $search-result-bgc: #439dd7;
 $icon-bgc: #439dd7dd;
 $about-section-bgc: #439dd778;
+$carousel-item-bgc: #439dd778;
 $footer-bgc: #439dd788;
 
 $inverted_colors: (
