--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -1,4 +1,53 @@
+@use "colors" as c;
+@use "fonts" as f;
+
 @mixin elements_grid($cols: 1) {
   display: grid;
   grid-template-columns: repeat($cols, 1fr);
+}
+
+@mixin carousel() {
+  position: relative;
+  padding: 40px 40px 0;
+  span {
+    position: absolute;
+    z-index: 999;
+    padding: 5px;
+    font-size: 1.8rem;
+    color: c.$font-color2;
+    background-color: c.$carousel-btn-bgc;
+    border-radius: 50%;
+    translate: 0 -50%;
+    cursor: pointer;
+    &:nth-of-type(1) {
+      top: 50%;
+      left: -10px;
+    }
+    &:nth-of-type(2) {
+      top: 50%;
+      right: -10px;
+    }
+  }
+  .carousel {
+    display: flex;
+    gap: 5%;
+    width: 100%;
+    overflow-x: hidden;
+    scroll-behavior: smooth;
+    a {
+      flex: 0 0 auto;
+      background-color: c.$carousel-item-bgc;
+      width: 30%;
+      min-height: 60%;
+      padding: 15px;
+      img {
+        width: 90%;
+        height: 80%;
+        margin-bottom: 10px;
+      }
+      figcaption {
+        color: c.$font-color;
+      }
+    }
+  }
 }
