--- a/scss/colors.scss
+++ b/scss/colors.scss
@@ -2,6 +2,8 @@ $font-color: black;
 $font-color2: white;
 $font-color3: #439dd7;
 $font-color4: #003d72;
+$font-color5: #1c3249;
+$font-color5-1: #1c32496b;
 $border-color: black;
 $menu-bar-color: black;
 $header-bgc: white;
@@ -11,6 +13,7 @@ $about-project-header-font-color: white;
 $icon-bgc2: #f4f4ec;
 $carousel_drugs: #f4f4ec;
 $card-person-bgc: #ffffff77;
+$hover-drugs: #ffffff99;
 $information-font-color: #003d72;
 $security-p-border-color: #003d72;
 $article-border: #003d72;
@@ -24,6 +27,7 @@ $icon-bgc: #439dd7dd;
 $about-section-bgc: #439dd778;
 $carousel-item-bgc: #439dd778;
 $footer-bgc: #439dd788;
+$hot-drugs-header-bgc: #1c3249;
 
 $inverted_colors: (
   primary: #ffffff,
